# py_botfrw_ex

./: .gitignore  package.json  pyproject.toml  ruffi.sh
01.console-echo/: app.py  console_adapter.py  echo_bot.py
02.echo-bot/: app.py  config.py
02.echo-bot/bots/: echo_bot.py
03.welcome-user/: app.py
03.welcome-user/bots/: __init__.py  welcome_bot.py
03.welcome-user/data_models/: __init__.py  welcome_state.py
05.multi-turn-prompt/: app.py
05.multi-turn-prompt/bots/: dialog_bot.py
05.multi-turn-prompt/dialogs/: user_profile_dialog.py
06.using-cards/: app.py
06.using-cards/bots/: dialog_bot.py  rich_cards_bot.py
06.using-cards/dialogs/: main_dialog.py
m3-basic/: app.py  oneapp.py  start_server.py
