[project]
name = "py-botfrw-ex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botbuilder-ai>=4.17.1",
    "botbuilder-dialogs>=4.17.1",
    "botbuilder-integration-aiohttp>=4.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
